--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "mongodb": "^2.2.33",
     "morgan": "~1.8.1",
     "mysql-promise": "^4.1.0",
-    "serve-favicon": "~2.4.2"
+    "request": "^2.83.0",
+    "serve-favicon": "~2.4.2",
+    "short-url": "0.0.1",
+    "urlencode": "^1.1.0"
   }
 }
